<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="motor_pp_states_t" Id="{81cc0ee0-84ba-4c9a-be2f-dac08fc74cb2}">
    <Declaration><![CDATA[TYPE motor_pp_states_t :
(
	START,
	SENDINGCMD,
	INPROGRESS,
	END
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>