<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="robot_modes_t" Id="{ec6bbfac-c85b-4d24-9378-81c105b801c2}">
    <Declaration><![CDATA[TYPE robot_modes_t :
( 	HM,
	PP,
	CSP
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>